# fast_carver

./: .gitignore  Cargo.toml  README.md  agents.md
.github/workflows/: ci.yml  release.yml  sync-wiki.yml
benches/: throughput.rs
config/: default.yml
docs/: Home.md  architecture.md  config.md  file-formats.md  metadata_csv.md  metadata_jsonl.md  metadata_parquet.md
planning/done/: archive_carving.md  audio_carving.md  carver-enhancements-v2.md  document_carving.md  file_type_coverage_overview.md  misc_format_carving.md  run_summary_metadata.md  video_carving.md
planning/features/: archive_carving.md  audio_carving.md  document_carving.md  file_type_coverage_overview.md  gpu_signature_scanner.md  gpu_string_scanner.md  misc_format_carving.md  parquet_extension.md  sqlite_metadata_backend.md  sqlite_raw_page_carving.md  third_party_license_report.md  video_carving.md
planning/wip/: for_browser_history.txt  golden_ewf.md  hash_calculation_deduplication.md  heic_heif_carver.md  sqlite_metadata_backend.md  sqlite_wal_and_page_fragment_carving.md  starting_instruction.md  windows_artefacts.md
src/: chunk.rs  cli.rs  config.rs  evidence.rs  lib.rs  logging.rs  main.rs  util.rs
src/carve/: avi.rs  bmp.rs  bzip2.rs  elf.rs  eml.rs  fb2.rs  footer.rs  gif.rs  gzip.rs  ico.rs  jpeg.rs  lrf.rs  mobi.rs  mod.rs  mov.rs  mp3.rs  mp4.rs  ogg.rs  ole.rs  pdf.rs  png.rs  rar.rs  rtf.rs  sevenz.rs  sqlite.rs  sqlite_page.rs  sqlite_wal.rs  tar.rs  tiff.rs  wav.rs  webm.rs  webp.rs  wmv.rs  xz.rs  zip.rs
src/metadata/: csv.rs  jsonl.rs  mod.rs  parquet.rs
src/parsers/: browser.rs  mod.rs  sqlite_db.rs  sqlite_pages.rs
src/pipeline/: events.rs  mod.rs  workers.rs
src/scanner/: cpu.rs  cuda.rs  gpu.rs  mod.rs  opencl.rs
src/strings/: cpu.rs  cuda.rs  gpu.rs  mod.rs  opencl.rs
tests/: boundary_conditions.rs  carver_mp4.rs  carver_sqlite_page.rs  carver_sqlite_wal.rs  checkpoint_resume.rs  golden_image_test.rs  graceful_shutdown.rs  integration_basic.rs  malformed_inputs.rs  metadata_parquet.rs  stress_tests.rs
(+42 files in other folders)
