[package]
name = "fastcarve"
version = "0.1.0"
edition = "2021"
authors = ["Uris"]
description = "High-speed forensic file and artefact carver with optional GPU acceleration."
license = "MIT"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
csv = "1"
hex = "0.4"
libc = "0.2"
md5 = "0.7"
memchr = "2"
num_cpus = "1"
once_cell = "1"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tempfile = "3"

[features]
default = []
ewf = []
