[package]
name = "swiftbeaver"
version = "0.2.1"
edition = "2024"
authors = ["gaestu"]
description = "High-speed forensic file and artefact carver with optional GPU acceleration."
license = "MIT"

[dependencies]
anyhow = "1"
arrow-array = "51"
arrow-schema = "51"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
ctrlc = "3"
csv = "1"
hex = "0.4"
libc = "0.2"
md5 = "0.7"
memchr = "2"
num_cpus = "1"
once_cell = "1"
opencl3 = { version = "0.9", optional = true }
cudarc = { version = "0.12", optional = true, features = ["cuda-version-from-build-system"] }
parquet = "51"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "throughput"
harness = false

[features]
default = ["ewf"]
ewf = []
gpu-opencl = ["opencl3"]
gpu-cuda = ["cudarc"]
gpu = ["gpu-opencl"]
